
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.mayuso</groupId>
	<artifactId>JMarkPad</artifactId>
	<packaging>jar</packaging>
	<version>1.2</version>
	<name>JMarkPad</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<dependencies>
	<dependency>
	  <groupId>org.openjfx</groupId>
	  <artifactId>javafx-controls</artifactId>
	  <version>13</version>
	</dependency>
	<dependency>
		<groupId>org.openjfx</groupId>
		<artifactId>javafx-fxml</artifactId>
		<version>13</version>
	</dependency>
	<dependency>
		<groupId>org.openjfx</groupId>
		<artifactId>javafx-web</artifactId>
		<version>13</version>
	</dependency>
	<dependency>
		<groupId>com.jfoenix</groupId>
		<artifactId>jfoenix</artifactId>
		<version>9.0.8</version>
	</dependency>
	<dependency>
		<groupId>com.vladsch.flexmark</groupId>
		<artifactId>flexmark</artifactId>
		<version>0.50.42</version>
	</dependency>
	<dependency>
		<groupId>com.vladsch.flexmark</groupId>
		<artifactId>flexmark-util</artifactId>
		<version>0.50.42</version>
	</dependency>
	</dependencies>
	<build>
	<plugins>
	  <plugin>
		<groupId>org.openjfx</groupId>
		<artifactId>javafx-maven-plugin</artifactId>
		<version>0.0.3</version>
		<configuration>
		  <mainClass>ui.Main</mainClass>
			<options>
				<option>--add-opens</option>
				<option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
				<option>--add-opens</option>
				<option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
				<option>--add-opens</option>
				<option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
				<option>--add-opens</option>
				<option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
				<option>--add-opens</option>
				<option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
			</options>
		</configuration>
	  </plugin>
	</plugins>
	</build>
</project>